# type-bridge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: Info.plist  build-mac.sh
src/: assets.rs  ip.rs  keyboard.rs  main.rs  server.rs  tray.rs  tray_icons.rs
