[package]
name = "type-bridge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
socketioxide = "0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.5"
arboard = "3"
tray-icon = "0.19"
muda = "0.15"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
qrcode = "0.14"
